# ichtaca

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  pages.yml  release.yml
crates/pass-tauri/: Cargo.toml  README.md  tauri.conf.json
crates/pass-tauri/icons/: icon.icns
crates/pass-tauri/src/: error.rs  lib.rs  main.rs  state.rs
crates/pass-tauri/src/commands/: clipboard.rs  mod.rs  read.rs  write.rs
crates/pass-tauri/ui/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.node.json  vite.config.ts
crates/pass-tauri/ui-dist/: index.html
crates/pass-tauri/ui/src/: App.svelte  app.css
crates/pass-tauri/ui/src/components/: ConfirmModal.svelte  DetailPanel.svelte  Form.svelte  SearchBar.svelte  StatusBar.svelte  TreePanel.svelte
crates/pass-tauri/ui/src/lib/: api.ts  types.ts
crates/pass-tauri/ui/tests/: ConfirmModal.test.ts  DetailPanel.test.ts  Form.test.ts  SearchBar.test.ts  TreePanel.test.ts  api.test.ts
crates/pass-tui/: Cargo.toml  README.md
crates/passcore/: Cargo.toml
crates/passcore/src/: clipboard.rs  config.rs  error.rs  generate.rs  lib.rs  otp.rs  search.rs  secret.rs
crates/passcore/src/entry/: mod.rs  parse.rs  template.rs
crates/passcore/src/store/: cli.rs  fake.rs  mod.rs
crates/passcore/tests/: cli_integration.rs
site/: config.toml
site/content/: _index.md
site/static/: style.css
site/templates/: base.html  docs.html  index.html
(+33 files in other folders)
