[package]
name = "pass-tauri"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[lib]
name = "pass_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "ichtaca-desktop"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
passcore = { path = "../passcore" }

[dev-dependencies]
# FakeStore comes from passcore (already a dep)
