[package]
name = "passcore"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
thiserror = "2"
zeroize = "1.8"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
walkdir = "2"
which = "6"
dirs = "5"
hmac = "0.12"
sha1 = "0.10"
sha2 = "0.10"
base32 = "0.5"
nucleo-matcher = "0.3"
rand = "0.9"

[dev-dependencies]
tempfile = "3"
